# markedb

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  README.md  Tiltfile  build-datatype-bindings.sh  datatype-bindings-builder.Dockerfile
Containerfiles/: backend.Containerfile
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20231202130332_Add_initial_tables.down.sql  20231202130332_Add_initial_tables.up.sql
backend/src/: endpoints.rs  main.rs  migrations.rs
d/: exit.sh  install.sh  kind_registry_create.sh  start.sh
deploy/kubernetes/base/: backend.yaml  deployment.yaml  express-ssr.yaml  kustomization.yaml  nginx.yaml  run-migrations.yaml
deploy/kubernetes/local-dev/: express-ssr-dev.yaml  kustomization.yaml  postgresql.yaml
frontend/: .dockerignore  .gitignore  README.md  nginx.conf  package-lock.json  package.json  server.mjs  vite.config.ts
frontend/app/: root.tsx
frontend/app/components/: EasterEgg.tsx  Patch.tsx
frontend/app/routes/: 404.tsx  _index.tsx
frontend/dockerfiles/: nginx.Dockerfile  remix.Dockerfile
